--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.hiraok.daggertodo"
+        applicationId "com.hiraok.twitcasting_sample"
         minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
