--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,16 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
 }
 
 androidExtensions {
@@ -34,31 +44,52 @@ androidExtensions {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
+
     implementation 'com.google.dagger:dagger-android:2.21'
     implementation 'com.google.dagger:dagger-android-support:2.21'
     annotationProcessor "com.google.dagger:dagger-android-processor:2.21"
     annotationProcessor "com.google.dagger:dagger-compiler:2.21"
     kapt 'com.google.dagger:dagger-android-processor:2.21'
     kapt "com.google.dagger:dagger-compiler:2.21"
+
     implementation("com.squareup.okhttp3:okhttp:4.0.0")
+    implementation "com.squareup.okhttp3:logging-interceptor:4.0.0"
+
+    implementation "com.facebook.stetho:stetho:1.5.1"
+    implementation "com.facebook.stetho:stetho-okhttp3:1.5.1"
+
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
+
     implementation("io.reactivex.rxjava2:rxkotlin:2.4.0-beta")
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
     implementation("com.squareup.moshi:moshi:1.8.0")
+    implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
+
     implementation 'android.arch.lifecycle:runtime:1.0.3'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    kapt 'android.arch.lifecycle:compiler:1.0.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha01"
+
     implementation 'com.google.android.exoplayer:exoplayer-core:2.10.2'
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.2'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.2'
-    kapt 'android.arch.lifecycle:compiler:1.0.0'
-    kapt 'com.android.databinding:compiler:3.4.1'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
 
 }
