--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,10 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:0.27.0-eap13'
+
+    implementation 'com.shopify:livedata-ktx:1.0.1'
 
 }
