--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,38 +62,38 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.21'
     kapt "com.google.dagger:dagger-compiler:2.21"
 
-    implementation("com.squareup.okhttp3:okhttp:4.0.0")
+    implementation "com.squareup.okhttp3:okhttp:4.0.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.0.0"
 
     implementation "com.facebook.stetho:stetho:1.5.1"
     implementation "com.facebook.stetho:stetho-okhttp3:1.5.1"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
+    implementation "com.squareup.retrofit2:retrofit:2.6.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.0"
 
-    implementation("io.reactivex.rxjava2:rxkotlin:2.4.0-beta")
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0-beta"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
 
-    implementation("com.squareup.moshi:moshi:1.8.0")
-    implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
+    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.6.0"
 
-    implementation 'android.arch.lifecycle:runtime:1.0.3'
-    implementation 'android.arch.lifecycle:extensions:1.0.0'
-    kapt 'android.arch.lifecycle:compiler:1.0.0'
+    implementation "android.arch.lifecycle:runtime:1.0.3"
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    kapt "android.arch.lifecycle:compiler:1.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha01"
 
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.2'
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.2'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.2'
+    implementation "com.google.android.exoplayer:exoplayer-core:2.10.2"
+    implementation "com.google.android.exoplayer:exoplayer-hls:2.10.2"
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.10.2"
 
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:0.27.0-eap13'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:0.27.0-eap13"
 
-    implementation 'com.shopify:livedata-ktx:1.0.1'
+    implementation "com.shopify:livedata-ktx:1.0.1"
 
 }
