--- a/.gitignore
+++ b/.gitignore
@@ -35,24 +35,23 @@ proguard/
 captures/
 
 # IntelliJ
-*.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
+.idea/caches/build_file_checksums.ser
+.idea/codeStyles/
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/dictionaries/
+.idea/libraries/
 .idea/misc.xml
-# Android Studio 3 in .gitignore file.
-.idea/caches
 .idea/modules.xml
-# Comment next line if keeping position of elements in Navigation Editor is relevant for you
-.idea/navEditor.xml
-
+.idea/tasks.xml
+.idea/scopes/scope_settings.xml
+.idea/workspace.xml
+.idea/.name
+*.iml
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
