--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.20'
+    ext.kotlin_version = '1.4.30'
+    ext.navigationVersion = '2.3.3'
+    ext.hiltVersion = '2.28-alpha'
     repositories {
         google()
         jcenter()
@@ -9,9 +11,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
     }
 }
 
@@ -19,10 +22,36 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    androidXVersion = '1.0.0'
+    androidXTestCoreVersion = '1.3.0'
+    androidXTestExtKotlinRunnerVersion = '1.1.2'
+    androidXTestRulesVersion = '1.3.0'
+    androidXAnnotations = '1.1.0'
+    appCompatVersion = '1.1.0'
+    archLifecycleVersion = '2.3.0'
+    archTestingVersion = '2.1.0'
+    coroutinesVersion = '1.2.1'
+    fragmentVersion = '1.3.0'
+    fragmentKtxVersion = '1.3.0'
+    hamcrestVersion = '1.3'
+    hiltAndroidXVersion = '1.0.0-alpha03'
+    junitVersion = '4.13'
+    dexMakerVersion = '2.12.1'
+    materialVersion = '1.3.0'
+    mockitoVersion = '2.19.0'
+    recyclerViewVersion = '1.1.0'
+    robolectricVersion = '4.3.1'
+    rulesVersion = '1.0.1'
+    timberVersion = '4.7.1'
+    truthVersion = '1.0'
+    pagingVersion = "3.0.0-beta01"
 }
