--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.4.30'
     ext.navigationVersion = '2.3.3'
-    ext.hiltVersion = '2.28-alpha'
+    ext.hiltVersion = '2.31-alpha'
     repositories {
         google()
         jcenter()
@@ -37,7 +37,8 @@ ext {
     androidXTestRulesVersion = '1.3.0'
     androidXAnnotations = '1.1.0'
     appCompatVersion = '1.1.0'
-    archLifecycleVersion = '2.3.0'
+    archLifecycleVersion = '2.2.0'
+    liveDataKtxVersion = '2.3.0'
     archTestingVersion = '2.1.0'
     coroutinesVersion = '1.2.1'
     fragmentVersion = '1.3.0'
