--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,25 +53,24 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
 
-    implementation "com.squareup.okhttp3:okhttp:4.2.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.0.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     implementation "com.facebook.stetho:stetho:1.5.1"
     implementation "com.facebook.stetho:stetho-okhttp3:1.5.1"
 
-    implementation "com.squareup.retrofit2:retrofit:2.7.1"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.1"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
 
-    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0-beta"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.20"
 
-    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi:1.9.2"
     implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.6.1"
+    implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
 
     implementation "android.arch.lifecycle:runtime:1.1.1"
-    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
 
     implementation "com.google.android.exoplayer:exoplayer-core:2.10.2"
@@ -86,7 +85,7 @@ dependencies {
     implementation "com.shopify:livedata-ktx:1.0.1"
 
     implementation "com.google.dagger:hilt-android:2.31-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.31-alpha"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:${hiltVersion}"
@@ -100,16 +99,15 @@ dependencies {
     kaptAndroidTest "androidx.hilt:hilt-compiler:$hiltAndroidXVersion"
 
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
-    implementation "androidx.fragment:fragment:$fragmentVersion"
     implementation "com.google.android.material:material:$materialVersion"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtxVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
-    implementation "androidx.paging:paging-runtime:$pagingVersion"
+    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
     //test
     androidTestImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
@@ -129,6 +127,6 @@ dependencies {
     implementation "androidx.test:core:$androidXTestCoreVersion"
     testImplementation "com.google.truth:truth:$truthVersion"
 
-    testImplementation "androidx.paging:paging-common:$pagingVersion"
+    testImplementation "androidx.paging:paging-common-ktx:$pagingVersion"
 
 }
