--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,22 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+}
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.2"
+
     defaultConfig {
-        applicationId "com.hiraok.chobit_casting"
+        applicationId "com.peionet.chobit_casting"
         minSdkVersion 27
         targetSdkVersion 30
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField("String", "CLIENT_ID", "\"chiraok.2d438d2efb56736aea7c282f6e1904b8244d707dff660a03c61c308aac814e82\"")
-        buildConfigField("String", "CLIENT_SECRET", "\"f4075f9ef7e054ee7fa70817fa70af775924262202aa9e1294be33b992c17a49\"")
     }
     buildTypes {
         release {
@@ -30,78 +31,45 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
         jvmTarget = "1.8"
     }
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+    kapt {
+        javacOptions {
+            option("-Adagger.fastInit=ENABLED")
+            option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
+        }
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation project(':core')
+    implementation project(':api')
+    implementation project(':domain')
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
+    implementation "android.arch.lifecycle:runtime:$runtimeVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModelKtxVersion"
 
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoPlayerVersion"
+    implementation "com.google.android.exoplayer:exoplayer-hls:$exoPlayerVersion"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoPlayerVersion"
 
-    implementation "com.facebook.stetho:stetho:1.5.1"
-    implementation "com.facebook.stetho:stetho-okhttp3:1.5.1"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
 
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
-
-    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.20"
-
-    implementation "com.squareup.moshi:moshi:1.9.2"
-    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
-
-    implementation "android.arch.lifecycle:runtime:1.1.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
-
-    implementation "com.google.android.exoplayer:exoplayer-core:2.10.2"
-    implementation "com.google.android.exoplayer:exoplayer-hls:2.10.2"
-    implementation "com.google.android.exoplayer:exoplayer-ui:2.10.2"
-
-    implementation "com.jakewharton.timber:timber:4.7.1"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
-
-    implementation "com.shopify:livedata-ktx:1.0.1"
-
-    implementation "com.google.dagger:hilt-android:2.31-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.31-alpha"
-
-    // Hilt
-    implementation "com.google.dagger:hilt-android:${hiltVersion}"
-    kapt "com.google.dagger:hilt-android-compiler:${hiltVersion}"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:${hiltAndroidXVersion}"
-    kapt "androidx.hilt:hilt-compiler:${hiltAndroidXVersion}"
-
-    // Hilt testing
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$hiltVersion"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hiltVersion"
-    kaptAndroidTest "androidx.hilt:hilt-compiler:$hiltAndroidXVersion"
+    implementation "com.shopify:livedata-ktx:$shopifyLiveDataKtxVersion"
 
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
     implementation "com.google.android.material:material:$materialVersion"
 
-    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtxVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
@@ -109,11 +77,15 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+
     //test
     androidTestImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     androidTestImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
     androidTestImplementation "androidx.test:rules:$androidXTestRulesVersion"
-    androidTestImplementation "androidx.annotation:annotation:$androidXAnnotations"
+    androidTestImplementation "androidx.annotation:annotation:$androidXAnnotationsVersion"
 
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
